kubernetes_deploy/production-live1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy_to_kubernetes script>"
  name: laa-legal-adviser-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laa-legal-adviser-api
      tier: api
      env: production
  template:
    metadata:
      labels:
        app: laa-legal-adviser-api
        tier: api
        env: production
        service_area: laa-get-access
        service_team: cla-fala
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - image: "<to be set by deploy_to_kubernetes>"
        name: app
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sleep","10"]
