kubernetes_deploy/production-live1/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-legal-adviser-api
  namespace: laa-legal-adviser-api-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: laa-legal-adviser-api-laa-legal-adviser-api-production-blue
    external-dns.alpha.kubernetes.io/aws-weight: "0"
spec:
  tls:
  - hosts:
    - laa-legal-adviser-api-production.apps.live-1.cloud-platform.service.justice.gov.uk
  - hosts:
      - laa-legal-adviser-api-production.cloud-platform.service.justice.gov.uk
  rules:
  - host: laa-legal-adviser-api-production.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-legal-adviser-api
          servicePort: 80
  - host: laa-legal-adviser-api-production.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-legal-adviser-api
          servicePort: 80
